# immuta-mcp

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  immuta_queries.py  mcp_server.py  pyproject.toml
.github/workflows/: ci.yml
deploy/helm/: Chart.yaml  values.yaml
deploy/helm/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  secret.yaml  service.yaml
